<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">NewsApp</string>
    <string name="loremipsum45">Lorem ipsum dolor sit amet, consectetuer adip</string>
    <string name="loremipsum35">Lorem ipsum dolor sit amet, consect</string>

    <!-- Entity strings -->
    <string name="list_item_txt_author_static">Author:</string>
    <string name="section">Section</string>
    <string name="published">Published:</string>
    <string name="date_time_example">2018-04-27,13.13</string>

    <!-- general -->
    <string name="request_method">GET</string>
    <string name="news_list_btn_reload">Reload</string>

    <!-- error messages -->
    <string name="no_network_error_message">No network detected. Ensure your device is connected!</string>
    <string name="json_parse_error_message">Error retrieving result.</string>
    <string name="no_results_error_message">No results found. Try another search!</string>
    <string name="connestion_error_message">Error connecting to server. Ensure your device is connected!</string>
    <string name="news_list_txt_no_result">No Results found!</string>

    <!-- list controller texts -->
    <string name="list_controller_first">First</string>
    <string name="list_controller_back">Back</string>
    <string name="list_controller_of_pages">Page: <xliff:g id="actual_page">%d</xliff:g>
        of <xliff:g id="max_page">%d</xliff:g></string>
    <string name="list_controller_next">Next</string>
    <string name="list_controller_last">Last</string>

    <!-- Settings stings -->
    <string name="menu_title">Search Options</string>
    <string name="settings_activity_label">Search Settings</string>

    <!-- List from past X days -->
    <string name="date_default_value" translatable="false">1</string>
    <string name="date_key" translatable="false">date_key</string>
    <string name="date_title">List from the past day(s)</string>

    <!-- Sections strings -->
    <string name="sections_key" translatable="false">sections_key</string>
    <string name="sections_title">Sections</string>
    <string name="all_other_sections">All sections except News, Environment, Business</string>
    <string name="all_other_sections_query_parameter" translatable="false">-news|-environment|-business</string>

    <!-- Section array labels -->
    <string name="section_news_label">Hírek</string>
    <string name="section_environment_label">Environment</string>
    <string name="section_business_label">Business</string>
    <string name="section_other_label">Other section</string>

    <!-- Section array values -->
    <string name="section_news_value" translatable="false">news</string>
    <string name="section_environment_value" translatable="false">environment</string>
    <string name="section_business_value" translatable="false">business</string>

    <!-- Searchable values -->
    <string name="searchable_hint">Search News</string>
    <string name="menu_search_by_keyword">Search by keyword</string>

    <!-- Additional UI displayed Entity Strings -->
    <string name="author_not_available">Not available</string>
    <string name="zulu_time">Z</string>
    <string name="date_unknown">Unknown</string>

</resources>
