<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/color_neutral">

    <!-- the default news list item -->
    <LinearLayout
        android:layout_width="@dimen/o_dp"
        android:layout_height="wrap_content"
        android:layout_weight="@dimen/layout_weight_one"
        android:orientation="vertical"
        android:visibility="visible"
        android:padding="@dimen/list_item_layout_padding"
        android:background="@color/color_environment">

        <!-- Title of Article parsed from JSON-->
        <TextView
            android:id="@+id/list_item_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/loremipsum45"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:paddingTop="@dimen/list_item_layout_padding"/>

        <!-- Author of Article placeholder, visible only if available-->
        <LinearLayout
            android:id="@+id/list_item_placeholder_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            android:paddingTop="@dimen/list_item_layout_padding">

            <!-- Author static string -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:text="@string/list_item_txt_author_static" />
            <!-- Author name, parsed from JSON -->
            <TextView
                android:id="@+id/list_item_txt_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/loremipsum35"
                android:paddingLeft="@dimen/list_item_layout_padding"/>
        </LinearLayout>

        <!-- Placeholder for Section and Date of Publication -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/list_item_layout_padding"
            android:gravity="center_vertical">

            <!-- Section parsed from JSON -->
            <TextView
                android:id="@+id/list_item_txt_section"
                android:layout_width="@dimen/o_dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/layout_weight_half"
                tools:text="@string/section"
                style="@style/TextAppearance.AppCompat.Subhead"/>

            <!-- Published placeholder, visible only if available -->
            <LinearLayout
                android:id="@+id/list_item_placeholder_date_published"
                android:layout_width="@dimen/o_dp"
                android:layout_height="wrap_content"
                android:layout_weight="@dimen/layout_weight_one"
                android:orientation="horizontal"
                android:visibility="visible"
                android:gravity="end">

                <!-- Published static string -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/published"
                    style="@style/TextAppearance.AppCompat.Caption"/>

                <!-- Date Published parsed from JSON string -->
                <TextView
                    android:id="@+id/list_item_txt_date_published"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/date_time_example"
                    android:paddingLeft="@dimen/list_item_layout_padding"
                    style="@style/TextAppearance.AppCompat.Caption"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- Button for opening Intent -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_navigate_next_black_24dp"
        android:paddingLeft="@dimen/list_item_layout_padding"/>
</LinearLayout>